Improve SSH key generation