@@ -2,14 +2,16 @@ package de.tum.in.www1.artemis.service.connectors.localci.buildagent;
 
 import static de.tum.in.www1.artemis.config.Constants.PROFILE_BUILDAGENT;
 
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.security.InvalidAlgorithmParameterException;
 import java.security.KeyPair;
 import java.security.KeyPairGenerator;
 import java.security.NoSuchAlgorithmException;
-import java.security.PrivateKey;
-import java.security.PublicKey;
+import java.security.spec.ECGenParameterSpec;
+import java.util.Base64;
 import java.util.Optional;
 
 import org.slf4j.Logger;
@@ -20,6 +22,7 @@ import org.springframework.context.annotation.Profile;
 import org.springframework.context.event.EventListener;
 import org.springframework.stereotype.Service;
 
+import de.tum.in.www1.artemis.config.icl.ssh.HashUtils;
 import de.tum.in.www1.artemis.exception.GitException;
 
 @Service
@@ -33,7 +36,7 @@ public class BuildAgentSSHKeyService {
     @Value("${artemis.version-control.ssh-private-key-folder-path:#{null}}")
     protected Optional<String> gitSshPrivateKeyPath;
 
-    @Value("${artemis.version-control.build-agent-use-ssh:true}")
+    @Value("${artemis.version-control.build-agent-use-ssh:false}")
     private boolean useSSHForBuildAgent;
 
     @EventListener(ApplicationReadyEvent.class)
@@ -51,41 +54,99 @@ public class BuildAgentSSHKeyService {
 
         KeyPairGenerator generator;
         try {
-            generator = KeyPairGenerator.getInstance("RSA");
+            generator = KeyPairGenerator.getInstance("EC");
+            ECGenParameterSpec ecSpec = new ECGenParameterSpec("secp256r1");
+            generator.initialize(ecSpec);
         }
-        catch (NoSuchAlgorithmException e) {
+        catch (NoSuchAlgorithmException | InvalidAlgorithmParameterException e) {
             throw new RuntimeException(e);
         }
-        generator.initialize(4096);
 
+        log.debug("Starting key pair generation");
         keyPair = generator.generateKeyPair();
+        log.debug("Key pair successfully generated");
 
         try {
-            Files.write(Path.of(gitSshPrivateKeyPath.orElseThrow(), "private.key"), keyPair.getPrivate().getEncoded());
-            Files.write(Path.of(gitSshPrivateKeyPath.orElseThrow(), "public.pub"), keyPair.getPublic().getEncoded());
+            Files.writeString(Path.of(gitSshPrivateKeyPath.orElseThrow(), "id_ecdsa"), getPrivateKeyAsString());
+            Files.writeString(Path.of(gitSshPrivateKeyPath.orElseThrow(), "id_ecdsa.pub"), getPublicKeyAsString());
         }
         catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
-    public Optional<PrivateKey> getPrivateKey() {
-        if (!shouldUseSSHForBuildAgent()) {
-            return Optional.empty();
-        }
+    private String getPrivateKeyAsString() {
+        Base64.Encoder encoder = Base64.getEncoder();
 
-        return Optional.of(keyPair.getPrivate());
+        return String.format("""
+                -----BEGIN PRIVATE KEY-----
+                %s
+                -----END PRIVATE KEY-----
+                """, encoder.encodeToString(keyPair.getPrivate().getEncoded()));
     }
 
-    public Optional<PublicKey> getPublicKey() {
+    /**
+     * Returns the fingerprint of the SSH public key
+     *
+     * @return the SHA 512 fingerprint of the SSH public key. null if SSH should not be used for cloning with this build agent.
+     */
+    public String getPublicKeyHash() {
         if (!shouldUseSSHForBuildAgent()) {
-            return Optional.empty();
+            return null;
         }
 
-        return Optional.of(keyPair.getPublic());
+        return HashUtils.getSha512Fingerprint(keyPair.getPublic());
     }
 
-    public boolean shouldUseSSHForBuildAgent() {
+    private boolean shouldUseSSHForBuildAgent() {
         return useSSHForBuildAgent;
+    }
+
+    /*
+     * Formats the PublicKey to meet the requirements of the id_ecdsa.pub file
+     */
+    private String getPublicKeyAsString() {
+        byte[] publicKeyBytes = keyPair.getPublic().getEncoded();
+        String publicKeyBase64 = Base64.getEncoder().encodeToString(prepareSshPublicKey(publicKeyBytes));
+        return String.format("ecdsa-sha2-nistp256 %s", publicKeyBase64);
+    }
+
+    private byte[] prepareSshPublicKey(byte[] publicKeyBytes) {
+        int keyLength = 32;
+        byte[] x = new byte[keyLength];
+        byte[] y = new byte[keyLength];
+        System.arraycopy(publicKeyBytes, 27, x, 0, keyLength);
+        System.arraycopy(publicKeyBytes, 27 + keyLength, y, 0, keyLength);
+
+        try {
+            ByteArrayOutputStream out = new ByteArrayOutputStream();
+            out.write(sshString("ecdsa-sha2-nistp256"));
+            out.write(sshString("nistp256"));
+            out.write(sshString(x, y));
+            return out.toByteArray();
+        }
+        catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private byte[] sshString(String str) throws IOException {
+        ByteArrayOutputStream out = new ByteArrayOutputStream();
+        out.write(intToBytes(str.length()));
+        out.write(str.getBytes());
+        return out.toByteArray();
+    }
+
+    private byte[] sshString(byte[] x, byte[] y) throws IOException {
+        ByteArrayOutputStream out = new ByteArrayOutputStream();
+        out.write(intToBytes(x.length + y.length + 1));
+        out.write(0x04);
+        out.write(x);
+        out.write(y);
+        return out.toByteArray();
+    }
+
+    private byte[] intToBytes(int value) {
+        return new byte[] { (byte) ((value >>> 24) & 0xFF), (byte) ((value >>> 16) & 0xFF), (byte) ((value >>> 8) & 0xFF), (byte) (value & 0xFF) };
     }
 }
